[feat] : 로고 이미지 대체 로고 폰트 추가 및 부분 적용

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
-/* .App {
+.App {
+    font-family: "PretendardVariable";
   
-} */
+}
+
+@font-face {
+    font-family: "ArchivoBlack-Regular";
+    src: url("./fonts/ArchivoBlack-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "PretendardVariable";
+    src: url("./fonts/PretendardVariable.ttf") format("truetype");
+}
