--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -26,6 +26,7 @@
 }
 
 .logo {
+    font-family: "ArchivoBlack-Regular", sans-serif;
     font-size: 4.4rem;
     font-weight: 900;
     letter-spacing: 2px;
