--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -18,21 +18,18 @@
     word-wrap: break-word;
     margin-bottom: 20px;
     line-height: 24px;
+}
+
+.me {
     position: relative;
     padding: 10px 20px;
+    color: white;
+    background: #0130AB;
     border-radius: 25px;
     float: right;
-    color: white;
-    background-color: #0130AB;
 }
 
-.speechBubbleWrap > div.from-them {
-    float: left;
-    color: black;
-    background-color: #E5E5EA;
-}
-
-.speechBubbleWrap > div.me:before {
+.me::before {
     content: "";
     position: absolute;
     z-index: -1;
@@ -44,15 +41,7 @@
     -webkit-transform: translate(0, -2px);
 }
 
-.speechBubbleWrap > div.from-them:before {
-    right: auto;
-    left: -7px;
-    border-right: none;
-    border-left: 20px solid #E5E5EA;
-    border-bottom-right-radius: 16px 14px;
-}
-
-.speechBubbleWrap > div:after {
+.me::after {
     content: "";
     position: absolute;
     z-index: 1;
@@ -65,11 +54,38 @@
     -webkit-transform: translate(-30px, -2px);
 }
 
-.speechBubbleWrap > div.from-them:after {
-    right: auto;
+.from-them {
+    position: relative;
+    padding: 10px 20px;
+    background: #E5E5EA;
+    border-radius: 25px;
+    color: black;
+    float: left;
+}
+
+.from-them::before {
+    content: "";
+    position: absolute;
+    z-index: 2;
+    bottom: -2px;
+    left: -7px;
+    height: 20px;
+    border-left: 20px solid #E5E5EA;
+    border-bottom-right-radius: 16px 14px;
+    -webkit-transform: translate(0, -2px);
+}
+
+.from-them::after {
+    content: "";
+    position: absolute;
+    z-index: 3;
+    bottom: -2px;
     left: 4px;
-    border-bottom-left-radius: 0;
+    width: 26px;
+    height: 20px;
+    background: white;
     border-bottom-right-radius: 10px;
+    -webkit-transform: translate(-30px, -2px);
 }
 
 .foodCatergoryWrap {
@@ -156,6 +172,7 @@
     width: 300px;
     border: 1px solid #ccc;
     color: #4D6AB3;
+    background-color: #FFFFF8;
     border-radius: 8px;
     overflow: hidden;
     text-align: center;
@@ -179,9 +196,9 @@
 .storeName {
     font-weight: bold;
     font-size: 18px;
-    padding: 10px;
+    padding: 11px 10px 5px 10px;
 }
   
 .storeInfo {
-    padding: 10px;
+    padding: 10px 10px 15px 10px;
 }
