헤더 배경색 삭제

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,7 +7,7 @@
     width: 100%;
     border-bottom: 1.5px solid #7CA1FF;
     height: 80px;
-    background-color: white;
+    background-color: #fffff8;
 }
 
 .header {
